@@ -552,27 +552,26 @@ class Common_api_functions {
 	 * @return void
 	 */
 	protected function transform_address ($result) {
-		// multiple options
-		if (is_array($result)) {
-			foreach($result as $k=>$r) {
-				// remove IP
-				if (isset($r->ip))					{ unset($r->ip); }
-				// transform
-				if (isset($r->subnet))				{ $r->subnet  = $this->Subnets->transform_address ($r->subnet,  "dotted"); }
-				elseif (isset($r->ip_addr))			{ $r->ip_addr = $this->Subnets->transform_address ($r->ip_addr, "dotted"); }
-			}
-		}
-		// single item
-		else {
-				// remove IP
-				if (isset($result->ip))				{ unset($result->ip); }
-				// transform
-				if (isset($result->subnet))			{ $result->subnet  = $this->Subnets->transform_address ($result->subnet,  "dotted"); }
-				elseif (isset($result->ip_addr))	{ $result->ip_addr = $this->Subnets->transform_address ($result->ip_addr, "dotted"); }
+		if (is_object($result)) {
+			$result_is_object = true;
+			$result = [$result];
 		}
 
-		# return
-		return $result;
+		if (!is_array($result))
+			return $result;
+
+		foreach($result as $r) {
+			$properties = ['subnet', 'ip_addr'];
+			foreach($properties as $property) {
+				if (property_exists($r, $property)) {
+					// remove IP & transform property to dotted notation
+					unset($r->ip);
+					$r->{$property} = $this->Subnets->transform_address($r->{$property}, "dotted");
+				}
+			}
+		}
+
+		return $result_is_object===true ? $result[0] : $result;
 	}
 
 	/**
